tests/snapshots/generate_graph__package__fail__package_multi_target.snap
---
source: tests/generate_graph.rs
expression: output
---
STDERR:
Error: No package found with name "foobar".

Packages present in workspace:
- package_multi_target


STDOUT:

